# PyGLImER

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  01_SingleStationStack.ipynb  2018-02-16T23:39:39.700000ZBR.PDRB..mseed  CONTRIBUTING.md  GLImER.py  LICENSE  Makefile  README.md  ccps.py  config.py  environment.yml  genindex.html  glimertoobs.py  index.html  objects.inv  onerequest.py  plot.py  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.h5
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: codecov.yml  deploy_gh_pages.yml  test_on_push.yml
_downloads/7aa3783bc2ea1a34f3c72888abd3e360/: DataCollectionSAC.ipynb
_downloads/7f2420441789f8b31a977c7111a64d78/: nc_CCPStack_SingleStation.ipynb
_downloads/b03b56c0d2d92a35247dee4381fab3a5/: ImportLocalDatabase.ipynb
_downloads/b1a4d0a909dfeb21411325e06ef248c7/: DataCollectionHDF5.ipynb
_downloads/c88afcc07a6e8aa6f6d30f44c5104cd8/: DataCollectionSAC.py
_modules/: index.html
_sources/chapters/: introduction.rst.txt
_sources/tutorials/: DataCollectionHDF5.rst.txt  DataCollectionSAC.rst.txt  ImportLocalDatabase.rst.txt  index.rst.txt  nc_CCPStack_SingleStation.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
branch/dev/: objects.inv  searchindex.js
branch/devel-lucas/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
chapters/: API.html  ccp.html  download.html  introduction.html  plotting.html  receiver_function.html
chapters/api/: ccp.html  database.html  index.html  plot.html  rf.html  test.html  utils.html  waveform.html
chapters/ccp/: ccpstackobject.html  index.html  intro.html
chapters/creation/: hdf5.html  index.html  requestclass.html
chapters/introduction/: installation.html  introduction.html
chapters/plotting/: ccp.html  index.html  receiverfunctions.html
chapters/receiver_functions/: hdf5.html  index.html  methods.html  sac.html
data/plot_data/: PaperDoubleFig.mplstyle
data/ratings/: BK.SAOrating.dir  YP.NE37rating.bak  YP.NE53rating.dir  YP.NE54rating.dir  YP.NE61rating.bak  YP.NE62rating.dir  YP.NE84rating.bak  YP.NE87rating.bak  YP.NE91rating.dir  YP.NE93rating.bak  YP.NE93rating.dir  YP.NEA2rating.bak  YP.NEP4rating.bak
data/raysum_traces/: 3D.geom  3D_0.arr  3D_0.ph  3D_20_4.tr  3D_30_15.tr  3D_30_4.tr  3D_4.tr  3D_40_4.tr  rot.tr
data/velocity_models/: avvmodel.pkl
docs/: Makefile  conf.py  index.rst
docs/chapters/: API.rst  ccp.rst  plotting.rst  receiver_function.rst
docs/source/: conf.py  index.rst
examples/: 00_DataCollection.ipynb  01_SingleStationStack.ipynb  01a_SingleStationStack.ipynb  01b_SingleStationStack hdf.ipynb  02_CCPStack_SingleStation.ipynb  02b_CCPStack_Network hdf.ipynb  README.md  params.yaml  plot_xsec.py  runplot.py
examples/docfigurescripts/: README.md  ccp_cross_sections.py  ccp_volume_slices.py  section.py  singlerf.py
examples/tutorials/: DataCollectionHDF5.py  DataCollectionMSEED.py  DataCollectionSAC.py  ImportLocalDatabase.py  README.rst  nc_CCPStack_SingleStation.py
examples/utils/: helper.py  plot_utils.py
formatting_test/: test_code_formatting.py
pyglimer/: __init__.py  constants.py  tmp.py
pyglimer/archive/: glimertoobs.py  plot.py
pyglimer/ccp/: __init__.py  ccp.py  io.py
pyglimer/data/: __init__.py  finddir.py
pyglimer/database/: asdf.py  stations.py
src/: constants.py  tmp.py
subfunctions/: Errorhandler.py  SignalProcessingTB.py  config.py  createRF.py  deconvolve.py  download.py  ipython.html  moveout_stack.py  nextPowerOf2.py  plot.py  preprocess.py  rate.py  rotate.py  tests.py
test_functions/: plot_section.py  synthetic.py  tests.py
tests/: __init__.py  test-rfh5.py  test_00log.py  test_SphericalNN.py  test_asdf.py  test_code_formatting.py  test_create.py  test_createvmodel.py  test_deconvolve.py  test_even2Dpoints.py  test_geoutils.py  test_log.py  test_moveout.py  test_raw.py  test_rfh5.py  test_rotate.py  test_signalproc.py  test_statistics.py  test_utils.py
tutorials/: DataCollectionHDF5.html  DataCollectionSAC.html  ImportLocalDatabase.html  index.html  nc_CCPStack_SingleStation.html  sg_execution_times.html
(+313 files in other folders)
