[metadata]
# replace with your username:
name = PyGLImER
version = 0.3.1
author = Peter Makus, Lucas Sawade
author_email = makus@gfz-potsdam.de
description = Pythonic Lithospheric Imaging using Earthquake Records
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PeterMakus/PyGLImER
project_urls =
    Documentation = https://Pythonic-Lithospheric-Imaging-using-Earthquake-Records.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Utilities
keywords = Seismology, Receiver Function, Earth Sciences, Lithosphere, Imaging, converted wave imaging

[options]
package_dir =
    = src
python_requires = >=3.7
install_requires = 
    global-land-mask
    OWSLib
    cartopy
    colorama
    dill
    geographiclib
    joblib 
    matplotlib
    numpy
    obspy>=1.3
    pandas
    pip
    plotly
    prov
    psutil
    pyasdf
    scipy<1.9
    tqdm
    flake8
    pyyaml
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx<6.0
    pydata-sphinx-theme
    sphinx-copybutton
    sphinx-gallery
    jinja2<3.1
tests = pytest; py

[options.packages.find]
where = src

