[metadata]
name = PyGLiMER
version = 0.4.2
author = Peter Makus, Lucas Sawade
author_email = makus@gfz-potsdam.de
description = Pythonic Lithospheric Imaging using Earthquake Records
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PyGLImER/PyGLImER
project_urls =
    Documentation = https://pyglimer.github.io/PyGLImER/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Utilities
keywords = Seismology, Receiver Function, Earth Sciences, Lithosphere, Imaging, converted wave imaging

[options]
package_dir =
    = src
python_requires = >=3.7, <3.11
install_requires =
    global-land-mask
    OWSLib
    cartopy
    colorama
    dill
    geographiclib
    joblib
    matplotlib
    numpy
    obspy>=1.3.1
    pandas
    pip
    plotly
    prov
    psutil
    pyvista
    pyyaml
    h5py
    scipy
    tqdm
tests_require =
    pytest
    py
    flake8
zip_safe = False

[options.package_data]
pyglimer =
    data/examples/*
    data/plot_data/*
    data/velocity_models/**

[options.extras_require]
docs =
    sphinx<6.0
    pydata-sphinx-theme
    sphinx-copybutton
    sphinx-gallery
    jinja2<3.1
tests =
    pytest
    py
    flake8

[options.packages.find]
where = src

